Let's call it a styles refresh

--- a/_lessons/101.html
+++ b/_lessons/101.html
@@ -4,11 +4,11 @@ title: Applying software engineering concepts to analytics
 lesson: 101
 ---
 
+class: title, center, middle
 # Who is an analytics engineer?
 
 ---
 
-layout: false
 # What is your day-to-day?
 
 (And what do you call yourselves?)
