--- a/_lessons/102.html
+++ b/_lessons/102.html
@@ -3,16 +3,16 @@ layout: presentation
 title: The Analytics Engineering Viewpoint
 lesson: 102
 ---
-template: title
+class: title, center, middle
 # The Analytics Engineering Viewpoint
 
 ---
 
-template: title
+class: subtitle, center, middle
 # Analytics code should be version controlled
 
 ---
-layout: false
+
 ## What is version control?
 
 - Version control helps manage changes to your code:
@@ -41,11 +41,11 @@ layout: false
 - We have a [git guide](https://github.com/fishtown-analytics/corp/blob/master/git-guide.md) for those getting started
 
 ---
-template: title
+class: subtitle, center, middle
 # Analytics code should have quality assurance
 
 ---
-layout: false
+
 ## What is QA?
 * Adding tests to check that your code is reliable
 * Tests give you peace of mind, and allows you to work faster
@@ -65,7 +65,7 @@ layout: false
 - Ensure source data is up to date
 ---
 
-template: title
+class: subtitle, center, middle
 # Analytics should be modular
 ---
 
@@ -111,11 +111,11 @@ Real life examples:
 From the pre-work: how we split up our code into separate "cleaning" and "transforming" models
 
 ---
-template: title
+class: subtitle, center, middle
 # Analytics should use environments
 
 ---
-layout: false
+
 ## What are environments?
 
 Environments allow you to develop and test code without impacting the users of their software.
@@ -135,7 +135,7 @@ Releasing your code into production is called “deployment”.
 - More info [here](https://docs.getdbt.com/docs/managing-environments).
 
 ---
-template: title
+class: subtitle, center, middle
 
 # Analytics workflows should be automated
 
