--- a/_lessons/103.html
+++ b/_lessons/103.html
@@ -7,6 +7,7 @@ estimated_working_session: 60
 teaching_method: live demo + slides. Questions encouraged.
 ---
 
+class: title, center, middle
 # dbt Fundamentals
 
 ???
@@ -22,7 +23,7 @@ Speaker track:
 - Please ask questions as we go, we need to make sure we're all on a solid foundation, as we'll continue to build on this foundation throughout the
 
 ---
-layout: false
+
 # The four ingredients for dbt
 
 ???
@@ -208,7 +209,7 @@ Instructions to teacher:
 * Copy the query from the tutorial and run it
 
 ---
-layout: false
+
 # Creating dependencies
 * It's often a good idea to split up models
 * Use the `ref` function to do build dependencies between models
