--- a/_lessons/104.html
+++ b/_lessons/104.html
@@ -7,11 +7,10 @@ teaching_method: slides
 working_session: false
 ---
 
+class: title, center, middle
 # Data Warehouse Design
 
 ---
-
-layout: false
 
 # Talk of the town
 
@@ -141,7 +140,7 @@ group by 1,2
 
 ---
 
-template: title
+class: subtitle, center, middle
 
 # Interfaces
 
@@ -205,7 +204,7 @@ find, and easy to infer contents?
 
 ---
 
-template: title
+class: subtitle, center, middle
 # The way we roll
 
 ---
@@ -320,7 +319,7 @@ I think about join "steps" as degrees of Kevin Bacon
 
 ---
 
-template: title
+class: subtitle
 # So what are BI tools for, anyway?
 
 ???
