--- a/_lessons/105.html
+++ b/_lessons/105.html
@@ -6,9 +6,10 @@ estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
 ---
+class: title, center, middle
 # Testing & CI
 ---
-layout: false
+
 # Refresher:
 --
 
