--- a/_lessons/107.html
+++ b/_lessons/107.html
@@ -7,11 +7,11 @@ teaching_method: live demo + slides. Questions encouraged.
 working_session: true
 ---
 
+class: title, center, middle
 # Docs
 
 ---
 
-layout: false
 # Why is documentation important?
 
 _Low quality research manifests as an environment of knowledge cacophony,
@@ -32,7 +32,7 @@ https://medium.com/airbnb-engineering/scaling-knowledge-at-airbnb-875d73eff091)
 
 ---
 
-template: title
+class: subtitle, middle, center
 ## How is knowledge documented and maintained at your company?
 
 ---
@@ -127,14 +127,11 @@ describe. If they are separate, documentation will _always_ lag behind.
 
 
 ---
+
+class: subtitle
+
 # Working session
 * Add a docs block for one (or all!) of the following:
     * A model
     * A source
     * A column
----
-
-background-color: orange
-class: middle, bottom
-
-# Questions?
