--- a/_lessons/202.html
+++ b/_lessons/202.html
@@ -4,7 +4,7 @@ title: Jinja
 lesson: 202
 ---
 
-<!-- just putting this here to prevent a silly jekyll warning at compile time -->
+class: title, center, middle
 
 {% raw %}
 
@@ -14,7 +14,7 @@ lesson: 202
 
 ---
 
-layout: false
+
 # Jinja is a templating engine
 
 & it's pythonic! So it works in ways you'd expect if you've ever
@@ -41,7 +41,7 @@ frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
 
 ---
 
-template: title
+class: subtitle, middle, center
 
 <p style="font-size: 500%;" class="remark-inline-code">
 {% ... %}<br>
@@ -306,6 +306,5 @@ good.ok.
 
 ---
 
-class: bottom
-background-color: orange
+class: subtitle, middle, center
 # Let's get templating!
