--- a/_lessons/203.html
+++ b/_lessons/203.html
@@ -3,9 +3,13 @@ layout: presentation
 title: Packages and projects
 lesson: 203
 ---
-layout: false
+
+class: title, center, middle
 # Packages
-* Packages are dbt projects that you can install in your _own dbt project_
+
+---
+class: subtitle, center, middle
+## Packages are dbt projects that you can install in your _own dbt project_
 
 
 ???
@@ -91,7 +95,7 @@ These models get added to your DAG!
 Installing packages also adds the models
 
 ---
-name: working-session
+class: subtitle
 # Working session
 ## Using macros from a package:
 * Add [dbt-utils](https://hub.getdbt.com/fishtown-analytics/dbt_utils/latest/) to your dbt project
@@ -136,6 +140,7 @@ If you have a macro in _your project_ with the same name as macro in the _dbt gl
 
 [Learn more](https://discourse.getdbt.com/t/did-you-know-dbt-ships-with-its-own-project/764).
 ---
+class: subtitle
 # Working session
 ## Using macros from a package:
 * Add [dbt-utils](https://hub.getdbt.com/fishtown-analytics/dbt_utils/latest/) to your dbt project
