--- a/_lessons/208.html
+++ b/_lessons/208.html
@@ -3,6 +3,10 @@ layout: presentation
 title: Techniques of the trade
 lesson: 208
 ---
+
+class: title, center, middle
+# (dbt) Techniques of the trade
+
 <!--
 Notes:
 - This presentation has gotten really long!
@@ -10,8 +14,6 @@ Notes:
 -->
 
 {% raw %}
-
-# (dbt) Techniques of the trade
 
 ???
 We've already learned the tools of the trade (dbt), but now we are learning the techniques.
@@ -28,7 +30,7 @@ Notes for teacher:
 
 ---
 
-layout: false
+
 
 ## On Monday:
 | order_id | status  | created_at | updated_at |
@@ -74,7 +76,7 @@ We want to turn our **mutable** data into **immutable data**
 
 ---
 
-layout: false
+
 
 # Anatomy of a snapshot
 
@@ -787,6 +789,8 @@ They can get tricky to handle in the BI layer:
 * Further aggregation can mess things up, especially for non-additive metrics (e.g. conversion rates)
 
 ---
+
+class: subtitle, center, middle
 # Fin!
 
 
