--- a/_lessons/209.html
+++ b/_lessons/209.html
@@ -3,6 +3,7 @@ layout: presentation
 title: End to end case study
 lesson: 209
 ---
+class: title, center, middle
 # Designing a data model
 ???
 Notes to teacher:
@@ -16,7 +17,7 @@ Speaker track:
 * I was both the stakeholder and the analyst
 * Emphasis on the word "design" — a ton of consideration for our end user
 ---
-layout: false
+
 # Process of modeling
 1. Define the model
 2. Exploratory model building
