--- a/_lessons/108.html
+++ b/_lessons/108.html
@@ -1,17 +1,16 @@
 ---
 layout: presentation
-title: Debugging Models
+title: Debugging dbt
 lesson: 108
 estimated_teaching_time: 15
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
 ---
 
+class: title, center, middle
 # Debugging dbt
 
 ---
-
-layout: false
 
 # What is dbt doing under the surface?
 
@@ -123,7 +122,8 @@ Run the SQL to find some examples of offending records
 - Phone a friend :)
 
 ---
-name:working-session
+class: subtitle
+
 # Working session
 * Break things!
     * Write some bad SQL
@@ -131,9 +131,3 @@ name:working-session
     * Break a test
     * Use a bad `ref`
 * Fix things 😌
----
-
-background-color: orange
-class: middle, bottom
-
-# On y va !
