--- a/_lessons/109.html
+++ b/_lessons/109.html
@@ -7,11 +7,10 @@ teaching_method: live demo + slides. Questions encouraged.
 working_session: true
 ---
 
+class: title, center, middle
 # Pull Requests
 
 ---
-
-layout: false
 
 # Why?
 
@@ -63,7 +62,7 @@ have the code already written. If you get into a habit now of communicating
 ideas and in-progress work to your colleagues, you'll thank yourself later.
 
 ---
-name:working-session
+class: subtitle
 
 # Ready, set, open!
 ## Summary of working sessions from today:
