Smarter next-slide transition. No bots

--- a/_lessons/101.html
+++ b/_lessons/101.html
@@ -72,6 +72,8 @@ where status not in ('cancelled', 'false')
 
 <img src="/lessons/img/{{page.lesson}}/role-comparison.png" style="width: 100%;">
 
+{% include options/next-presentation.html %}
+
 ???
 What do these software engineering best practices look like?
 
