--- a/_lessons/102.html
+++ b/_lessons/102.html
@@ -157,3 +157,5 @@ Automated processes:
 3. Your BI tool is connected ot the transformed data
 
 <img src="/lessons/img/101/modern-data-stack.svg" style="width: 100%;">
+
+{% include options/next-presentation.html %}
