--- a/_lessons/103.html
+++ b/_lessons/103.html
@@ -315,6 +315,7 @@ Notes on the data (for teachers, hopefully the students discover some of these)
 
 ---
 name: working-session
+class: subtitle
 # Working session
 We just got some payment data into our warehouse:
 
@@ -332,6 +333,8 @@ select * from raw.stripe.payment
     * `credit_card_amount`
     * `coupon_amount`
     * etc.
+
+{% include options/next-presentation.html %}
 
 ???
 Discussion points (leading questions for the next session)
