--- a/_lessons/104.html
+++ b/_lessons/104.html
@@ -411,6 +411,7 @@ group by 1,2
 <img src="/lessons/img/{{page.lesson}}/bi-logos.png" class="img-center">
 ---
 name: working-session
+class: subtitle
 # Working session
 
 Refactor your project to be consistent with how we (Fishtown) structure our dbt project. Consider
@@ -419,3 +420,5 @@ Refactor your project to be consistent with how we (Fishtown) structure our dbt 
 
 ## Bonus:
 Try using the [schema](https://docs.getdbt.com/docs/using-custom-schemas#section-what-is-a-custom-schema) configuration to split your models across multiple schemas
+
+{% include options/next-presentation.html %}
