--- a/_lessons/105.html
+++ b/_lessons/105.html
@@ -198,7 +198,10 @@ Wait, how do I automate running dbt?
 We use the scheduler in [dbt Cloud](cloud.getdbt.com) to run dbt in production.
 
 ---
-name:working-session
+name: working-session
+class: subtitle
 
 # Working session
 * Ensure that your (new) `orders` model has tests on it
+
+{% include options/next-presentation.html %}
