--- a/_lessons/106.html
+++ b/_lessons/106.html
@@ -111,7 +111,10 @@ dbt source snapshot-freshness
 
 ---
 
+name: working-session
 class: subtitle
 
 # Working session
 * Add `sources` for our two data sources: `jaffle_shop` and `stripe`.
+
+{% include options/next-presentation.html %}
