--- a/_lessons/107.html
+++ b/_lessons/107.html
@@ -128,6 +128,7 @@ describe. If they are separate, documentation will _always_ lag behind.
 
 ---
 
+name: working-session
 class: subtitle
 
 # Working session
@@ -135,3 +136,5 @@ class: subtitle
     * A model
     * A source
     * A column
+    
+{% include options/next-presentation.html %}
