--- a/_lessons/203.html
+++ b/_lessons/203.html
@@ -148,3 +148,5 @@ class: subtitle
 
 ## Overriding the dbt global project
 * Change the way that dbt generates schema names ([docs](https://docs.getdbt.com/docs/using-custom-schemas#section-changing-the-way-dbt-generates-a-schema-name)).
+
+{% include options/next-presentation.html %}
