--- a/_lessons/205.html
+++ b/_lessons/205.html
@@ -406,3 +406,5 @@ cluster is, well, a cluster.
 
 class: subtitle, middle, center
 # Now for something a little bit different...
+
+{% include options/next-presentation.html %}
