--- a/_lessons/206.html
+++ b/_lessons/206.html
@@ -174,3 +174,5 @@ when you need it
 
 class: subtitle, middle, center
 # Speaking of modeling paradigms...
+
+{% include options/next-presentation.html %}
