--- a/_lessons/207.html
+++ b/_lessons/207.html
@@ -349,3 +349,5 @@ the database) that is **necessarily a trade-off**.
 
 class: subtitle, middle, center
 ### Made it :)
+
+{% include options/next-presentation.html %}
