--- a/lessons.html
+++ b/lessons.html
@@ -4,6 +4,8 @@ title: Lessons
 permalink: /lessons/
 ---
 
+<meta name="robots" content="noindex">
+
 <div class="bg-navy-darker">
 	<div class="section-lg text-white text-navy-lightest">
 		<div class="container">
