Touch up on the touch ups

--- a/_lessons/103.html
+++ b/_lessons/103.html
@@ -290,6 +290,7 @@ Teacher notes:
 * For those who do understand, there's a working session
 ---
 
+class: subtitle
 # Working session
 We just got some payment data into our warehouse:
 
