--- a/_lessons/201.html
+++ b/_lessons/201.html
@@ -31,7 +31,7 @@ Allow students to ask any questions
 Discuss what the project the teachers have been working on looks like
 
 ---
-layout: presentation
+class: title, center, middle
 # Polish your dbt project
 ## 1. dbt code
 ## 2. non-dbt code
@@ -188,9 +188,9 @@ A good PR shows the context of your changes. A PR template helps your write bett
 * Improve your README
 * Add a PR template (optional)
 
+{% endraw %}
+{% include options/next-presentation.html %}
+
 ???
 Only do this exercise if time permits
 
-{% endraw %}
-
-{% include options/next-presentation.html %}
