--- a/_lessons/202.html
+++ b/_lessons/202.html
@@ -43,7 +43,7 @@ frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
 
 class: subtitle, middle, center
 
-<p style="font-size: 500%;" class="remark-inline-code">
+<h1 style="font-size: 300%;" class="remark-inline-code">
 {% ... %}<br>
 {{ ... }}
 </p>
