--- a/_lessons/209.html
+++ b/_lessons/209.html
@@ -186,6 +186,7 @@ background-color: #005E7A
 This is what it ended up as! A ton more complicated!
 (To-do: it needs to be at least 3x bigger than this!)
 ---
+class: subtitle
 # Final checklist:
 Before you send a PR to be reviewed, check whether you have:
 * Have I used sources?
