--- a/_lessons/208.html
+++ b/_lessons/208.html
@@ -49,6 +49,7 @@ Let's draw it!
 ???
 [to do for future Learns that i'm not part of, insert image here!]
 ---
+---
 # Case study
 **What other questions will business users have when they see this dashboard?**
 --
@@ -62,7 +63,6 @@ Let's draw it!
 ---
 # Case study
 **What is the granularity of the model?**
-
 **What fields do I need?**
 
 --
@@ -98,8 +98,11 @@ Before you go any further, ask yourself:
 * Is this an ad-hoc request, or something that is worth spending time on?
 
 ---
+class: subtitle
+
 # Exploratory model building
 ---
+
 # Work backwards to the {% raw %}{{ source() }}{% endraw %}
 * What data to I have available to fill in the blanks?
   * Now is the time to interrogate your data.
@@ -108,27 +111,37 @@ Before you go any further, ask yourself:
 
 ---
 .center[
-<img src="/lessons/img/{{page.lesson}}/exploratory-data-analysis.jpeg" style="width: 50%;">
+<img src="/lessons/img/{{page.lesson}}/exploratory-data-analysis.jpeg" style="width: 35%;">
 ]
-[Source](https://twitter.com/b0rk/status/1182288624018247685?lang=en)
+
+.caption[
+  [Source](https://twitter.com/b0rk/status/1182288624018247685?lang=en)
+]
 ---
 # Case study
 What data do I have?
-* `raw.slack.messages`: Data source that gets updated daily
-* `raw.slack_historical.messages`: Historical message export
+```sql
+select * from raw.slack.messages limit 10;
+select * from raw.slack_historical limit 10;
+```
 
 Great let’s draw a DAG & write a few models!
 ???
-To-do:
-* Insert a picture of DAG
-* Link to the repo
+Teacher notes:
+- Open up Snowflake and run the following:
+
+
 ---
-# Write V1 of the model
+# Write V0 of the model
 * Start by putting all your code in one or a few SQL files! (but use CTEs)
 * Develop your dashboard at the same time to check the results
 * What other “sources of truth” do you have for this data? Does your model match?
 * Is it perfect? (Does it need to be?)
 Then `git commit!`
+
+[Version 1 of our models](https://cloud.getdbt.com/accounts/1951/runs/3522578/docs/#!/model/model.learn_case_study.stg_slack__messages)
+
+
 ---
 # Case study
 **Process I used**
@@ -145,7 +158,7 @@ This is where the repo is at. Demonstrate some the cleaning up that has happened
 # V0 Chart:
 ## Posts in each channel each week
 .center[
-<img src="/lessons/img/{{page.lesson}}/bad-looker-chart.png"style="width: 100%;">
+<img src="/lessons/img/{{page.lesson}}/bad-looker-chart.png"style="width: 60%;">
 ]
 
 ???
@@ -157,6 +170,7 @@ What's wrong here?
 * `channel_id` isn't actually that useful — use `channel_name` instead
 ---
 
+# Get to V1 by iterating
 **Things discovered while iterating on this model:**
 * Different column names in historical? Only a `channel_name`, not a `channel_id`
 * The data time periods overlap
@@ -164,6 +178,8 @@ What's wrong here?
 * Messages includes channel joins!
 
 ---
+class: subtitle
+
 # Refactor
 ---
 
@@ -186,13 +202,13 @@ background-color: #005E7A
 This is what it ended up as! A ton more complicated!
 (To-do: it needs to be at least 3x bigger than this!)
 ---
-class: subtitle
 # Final checklist:
-Before you send a PR to be reviewed, check whether you have:
+Before you send a PR to be reviewed, check:
 * Have I used sources?
 * Have I materialized my models appropriately?
 * Does my code match the style guide?
 * Do I have tests and descriptions?
+
 (Check out our [checklist](https://github.com/fishtown-analytics/dbt-init/blob/master/starter-project/.github/pull_request_template.md))
 
 ???
